# social-llama

./: .cookiecutter.json  .darglint  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bandit.yml  env.yml  environment.yml  noxfile.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
data/: plotting.ipynb  similarities.json
data/evaluation/socket/: socket_prompts.csv  socket_prompts_knowledge.csv  socket_prompts_knowledge_original.csv
data/evaluation/ten-dim/: Llama-2-7b-hf-lora-10-dim.json  Mistral-7B-v0.1-lora-10-dim.json  bert_test.json  lstm_test.json  roberta-large-lora-10-dim.json  roberta-large_multilabel-model_ovr-eval.json
data/multilabel/: Computer Science.json  Mathematics.json  Physics.json  Statistics.json  roberta-large_Computer Science.json  roberta-large_Quantitative Biology.json  roberta-large_Quantitative Finance.json  roberta-large_multilabel-model_ovr-eval.json  roberta-large_ovr-model_multilabel-eval.json
data/multilabel/google/: gemma-2b_Computer Science.json  gemma-2b_Mathematics.json  gemma-2b_Physics.json  gemma-2b_Quantitative Biology.json  gemma-2b_Quantitative Finance.json  gemma-2b_Statistics.json  gemma-2b_multilabel-model_ovr-eval.json  gemma-2b_ovr-model_multilabel-eval.json
data/multilabel/meta-llama/: Llama-2-7b-hf_Computer Science.json  Llama-2-7b-hf_multilabel-model_ovr-eval.json
data/reverse-instructions/: full_data_info.csv
data/reverse-instructions/raw/: complaints_reverse_instructions.json  (+7 more)
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
scripts/: classifier.sh  classifier_eval.sh  classifier_multilabel.sh  classifier_multilabel_ovr.sh  dpo.sh  env.sh  evaluation.sh  instruction_generation.sh  lumi_evaluator.sh  lumi_evaluator.txt  merge_peft.sh  rag.sh  sft.sh  train_eval_single_task.sh  trainer.sh
src/social_llama/: __init__.py  __main__.py  config.py  math.py  utils.py
tests/: __init__.py  test_dataclass.py  test_main.py  test_math.py  test_social_dimensions.py
tests/data_processing/: test_social_dimensions.py
tests/evaluation/: test_helper_functions.py
(+958 files in other folders)
