[tool.poetry]
name = "social-llama"
version = "0.0.2"
description = "Social Llama"
authors = ["Anders Giovanni Møller <andersgiovanni@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AGMoller/social-llama"
repository = "https://github.com/AGMoller/social-llama"
documentation = "https://social-llama.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/AGMoller/social-llama/releases"

[tool.poetry.dependencies]
python = "3.11.*"
click = ">=8.0.1"
datasets = "^2.14.4"
torch = "^2.0.1"
peft = "^0.5.0"
transformers = "^4.32.1"
trl = "^0.7.1"
bitsandbytes = "^0.41.1"
scipy = "^1.11.2"
accelerate = "^0.22.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
social-llama = "social_llama.__main__:main"

[tool.poetry.group.dev.dependencies]
datasets = "^2.14.4"
torch = "^2.0.1"
ipykernel = "^6.25.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["social_llama", "tests"]
omit = [
    "*/__init__.py",
    "*/config.py",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
